--- a/2024-01-15-Mastering-GitHub-Pages-Deploy-React-with-Vite/code/index.html
+++ b/2024-01-15-Mastering-GitHub-Pages-Deploy-React-with-Vite/code/index.html
@@ -3,12 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-        <link
-            type="image/png"
-            sizes="32x32"
-            rel="icon"
-            href="/icons8-ask-question-48.png"
-        />
+        <link type="image/png" sizes="32x32" rel="icon" href="/icon.png" />
         <!-- Font: Inter -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
